// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea component compontent snapshots default 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="input-type-textarea"
    >
      Testing TextArea
    </label>
    <textarea
      aria-describedby=""
      class="usa-textarea"
      id="input-type-textarea"
      name="testing-textarea"
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots required and error 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="input-type-textarea"
    >
      Testing TextArea
      <span
        style="color: rgb(229, 28, 62);"
      >
        *
      </span>
    </label>
    <textarea
      aria-describedby=""
      class="usa-textarea"
      id="input-type-textarea"
      name="testing-textarea"
      placeholder="Can you place this?"
      required=""
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots success 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="input-type-textarea"
    >
      Testing TextArea
    </label>
    <textarea
      aria-describedby=""
      class="usa-textarea usa-input--success"
      id="input-type-textarea"
      name="testing-textarea"
    />
  </div>
</div>
`;
